--- a/public/zaprosit-demo.html
+++ b/public/zaprosit-demo.html
@@ -463,9 +463,10 @@
         </div>
       </div>
     </footer>
+    <script src="js/lib.min.js"></script>
     <script src="js/main.min.js"></script>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAzRYZB36YULyiUsTrSkN7tu92ziw_i6Hc"></script>
-    <script src="https://rawgit.com/intoro/Lazy_Load_JQuery/master/js/1_9_7_jquery.lazyload.js"> </script>
+    <script src="https://rawgit.com/intoro/Lazy_Load_JQuery/master/js/1_9_7_jquery.lazyload.js"></script>
     <script async="" src="https://unpkg.com/es-module-shims@1.3.6/dist/es-module-shims.js"></script>
     <script type="importmap">
       {
